// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseSelectOptions creates an option list 1`] = `
[
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "test-val",
    "props": {
      "children": "Value",
      "data-testid": "test-val",
      "label": "Value",
      "value": "val",
    },
    "type": "option",
  },
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "test-val2",
    "props": {
      "children": "Value 2",
      "data-testid": "test-val2",
      "label": "Value 2",
      "value": "val2",
    },
    "type": "option",
  },
]
`;

exports[`parseSelectOptions creates an option list 2`] = `
[
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "test-val",
    "props": {
      "children": "val",
      "data-testid": "test-val",
      "label": "val",
      "value": "val",
    },
    "type": "option",
  },
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "test-val2",
    "props": {
      "children": "val2",
      "data-testid": "test-val2",
      "label": "val2",
      "value": "val2",
    },
    "type": "option",
  },
]
`;

exports[`parseSelectOptions creates an option list as object 1`] = `
[
  {
    "key": "test-val",
    "label": "Value",
    "value": "val",
  },
  {
    "key": "test-val2",
    "label": "Value 2",
    "value": "val2",
  },
]
`;

exports[`parseSelectOptions creates an option list as object without generated labels 1`] = `
[
  {
    "label": "val",
    "value": "val",
  },
  {
    "label": "val2",
    "value": "val2",
  },
]
`;
